--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,18 @@
     "name": "nietthijmen/laravel-roles",
     "description": "This is my package laravel-roles",
     "keywords": [
-        "NietThijmen",
         "laravel",
-        "laravel-roles"
+        "roles",
+        "permissions",
+        "middleware",
+        "authorization"
     ],
     "homepage": "https://github.com/nietthijmen/laravel-roles",
     "license": "MIT",
     "authors": [
         {
             "name": "NietThijmen",
-            "email": "53520119+NietThijmen@users.noreply.github.com",
+            "email": "thijmen@rierink.dev",
             "role": "Developer"
         }
     ],
@@ -23,15 +25,7 @@
     "require-dev": {
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "larastan/larastan": "^2.9||^3.0",
-        "orchestra/testbench": "^10.0.0||^9.0.0||^8.22.0",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-arch": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0",
-        "phpstan/extension-installer": "^1.3||^2.0",
-        "phpstan/phpstan-deprecation-rules": "^1.1||^2.0",
-        "phpstan/phpstan-phpunit": "^1.3||^2.0",
-        "spatie/laravel-ray": "^1.35"
+        "phpstan/phpstan-phpunit": "^1.3||^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -46,11 +40,6 @@
         }
     },
     "scripts": {
-        "post-autoload-dump": "@composer run prepare",
-        "prepare": "@php vendor/bin/testbench package:discover --ansi",
-        "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
         "format": "vendor/bin/pint"
     },
     "config": {
@@ -64,12 +53,9 @@
         "laravel": {
             "providers": [
                 "NietThijmen\\LaravelRoles\\LaravelRolesServiceProvider"
-            ],
-            "aliases": {
-                "LaravelRoles": "NietThijmen\\LaravelRoles\\Facades\\LaravelRoles"
-            }
+            ]
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": false
 }
